--- a/app/src/main/res/layout/dialog_add_pill.xml
+++ b/app/src/main/res/layout/dialog_add_pill.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:background="#1565C0"
+    android:background="#FF6F00"
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="wrap_content"
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
+        android:textColorHint="#ffffff"
         android:textColor="#ffffff"
         android:hint="Pill Name"
         android:id="@+id/pill_name"/>
@@ -31,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize = "30dp"
+        android:textColorHint="#ffffff"
         android:textColor="#ffffff"
         android:hint="Number of pills"
         android:id="@+id/pill_number"/>
